trunk/Archive2/7f/49dbe369010a50/output
main.cpp:3:1: error: expected constructor, destructor, or type conversion before 'printf'
 printf("presa bene");
 ^
