trunk/Archive2/7f/49dbe369010a50/main.cpp
#include <stdio.h>
main()
printf("presa bene");